--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.5",
     "@supabase/supabase-js": "^2.44.3",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
